--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .gradient-background {
-  background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+  background: linear-gradient(300deg, #00bfff, #7FC7D9, #DCF2F1);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
