--- a/css/register.css
+++ b/css/register.css
@@ -10,7 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height:100vh ;
-    background:url('/images/service.png') no-repeat;
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
     background-size: cover;
     background-position: center;
 }
@@ -84,10 +84,18 @@ body{
     font-weight: 600;
     
 }
+
 @media (max-width:576px) {
     .input-box .input-field{
         width: 100%;
         margin: 10px 0;
     }
-    
+}
+.pass-icon{
+    position:absolute;
+    top:10px;
+    right:10px;
+    width:24px;
+    cursor:pointer;
+
 }
